tests/snapshots/run_wpt_conformance__trtx_reduceSumSquare_float32_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 1D constant tensor all positive default options",
    "trtx",
    "PASS",
)
